# forgecad-public-kit

./: .gitignore  AGENTS.md  CLAUDE.md  LICENSE  README.md  SOLVER_IMPROVEMENT_PLAN.md  benchmark.glm5-2.md  benchmark.glm5.md  benchmark.kimi25.md  benchmark.md  benchmark.minimax.md  biome.json  cli-test.mjs  index.html  manifold.wasm  package-lock.json  package.json  repomix-output.xml  tsconfig.dts.json  tsconfig.json  vite.config.ts  vitest.config.ts
.agents/: settings.local.json
bench/: .gitignore  README.md  prepare.mjs  runner.js  runner.mjs  score.mjs
cli/: check-api-contracts.ts  check-backend-parity.ts  check-brep-export.ts  check-compiler.ts  check-constraints.ts  check-dimensions.ts  check-examples.ts  check-js-modules.ts  check-occt-lower.ts  check-placement-references.ts  check-query-propagation.ts  check-suite.ts  check-text.ts  check-transforms.ts  collect-files.ts  compiler-inspection.ts  compiler-regression-corpus.ts  debug-compiler.ts  debug-dimensions.ts  debug-face-history.ts  edge-finish-fixtures.ts  experiment-perf.ts  experiment-perf2.ts  experiment-perf3.ts  experiment-perf4.ts  forge-brep-export.py  forge-brep.ts  forge-capture.ts  (+34 more)
solver/: Cargo.toml
solver/pkg/: solver_bg.wasm
solver/src/: lib.rs  types.rs
solver/src/constraints/: mod.rs
solver/src/solver/: analytical.rs  constructive.rs  coord_reduction.rs  decompose.rs  graph.rs  linear.rs  lm.rs  mod.rs  profiler.rs  reconstruction.rs  session.rs  subgraph_detection.rs
solver/tests/: capture_replay_tests.rs  helpers.rs  solver_tests.rs  svg_snapshot_tests.rs  testkit.rs
(+1172 files in other folders)
